syntax = "proto3";

option go_package = "github.com/gabuladze/blockchain/proto";

service Node {
    rpc Handshake(Version) returns (Version);
    rpc HandleTransaction(Transaction) returns (None);
    rpc HandleBlock(Block) returns (None);
    rpc FetchBlocks(FetchBlocksRequest) returns (FetchBlocksResponse);
}

message FetchBlocksRequest {
    int64 from = 1;
    int64 to = 2; 
}

message FetchBlocksResponse {
    repeated Block blocks = 1;
    int64 currentHeight = 2;
}

message Version {
    string version = 1;
    int64 height = 2;
    string addr = 3;
    repeated string peers = 4;
}

message None { }

message Block {
    Header header = 1;
    repeated Transaction transactions = 2;
    bytes pubKey = 3;
    bytes signature = 4;
}

message Header {
    int32 version = 1;
    int64 height = 2;
    bytes prevHash = 3;
    bytes rootHash = 4; // merkle root of txs
    int64 timestamp = 5;
}

message TxInput {
    bytes prevTxHash = 1;
    uint32 prevOutIndex = 2;
    bytes pubKey = 3;
    bytes signature = 4;
}

message TxOutput {
    int64 amount = 1;
    bytes address = 2;
}

message Transaction {
    int32 version = 1;
    repeated TxInput inputs = 2;
    repeated TxOutput outputs = 3;
}